deployments-k8s-siu/siu-k8s/base-siu/solicitudes/1.0.0/solicitudes-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solicitudes-api
spec:
  selector:
    matchLabels:
      app: solicitudes-api
  template:
    metadata:
      labels:
        app: solicitudes-api
    spec:
      imagePullSecrets:
        - name: hub.siu.edu.ar
      volumes:
        - name: secrets
          secret:
            secretName: solicitudes
      containers:
        - name: solicitudes-api
          image: hub.siu.edu.ar:5005/siu/expedientes/arai-solicitudes/api:1.0.0
          imagePullPolicy: Always
          volumeMounts:
            - name: secrets
              mountPath: /var/secrets
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: solicitudes-api
spec:
  selector:
    app: solicitudes-api
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solicitudes-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
spec:
  ingressClassName: nginx
  rules:
    - host: uunn.local
      http:
        paths:
          - path: /api-solicitudes/(.+)
            pathType: Prefix
            backend:
              service:
                name: solicitudes-api
                port:
                  number: 80
  tls:
    - hosts:
        - uunn.local
      secretName: uunn.local
